<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_grey1">

    <include layout="@layout/titlebar"/>

    <!--用户条-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/white"
        >
        <com.milai.lll_teacher.custom.view.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_head"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="22dp"
            android:textSize="16sp"
            android:textColor="@color/text_black2"
            android:text="用户名sdflj"
            />

        <TextView
            android:id="@+id/tv_user_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_user_name"
            android:layout_below="@id/tv_user_name"
            android:layout_marginTop="10dp"
            android:textSize="10sp"
            android:textColor="@color/edit_text_color"
            android:text="正在审核中"
        />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_half_circle_orange">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/icon_update"
                android:layout_gravity="center_vertical"
                android:padding="2dp"
                android:background="@drawable/shape_circle_white"
                android:layout_marginLeft="4dp"/>
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:text="审核中"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </RelativeLayout>

    <!--我的简历-->
    <RelativeLayout
        android:id="@+id/rl_my_resume"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_resume"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/my_resume"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <!--我的投递记录-->
    <RelativeLayout
        android:id="@+id/rl_apply_job"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_record"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/my_apply_record"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12.5dp"
            android:background="@color/border2"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <!--我的面试邀请-->
    <RelativeLayout
        android:id="@+id/rl_my_interview"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_invite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black2"
            android:text="@string/my_interview"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <!--我的收藏的职位-->
    <RelativeLayout
        android:id="@+id/rl_my_job_collection"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_collect_job"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black2"
            android:text="@string/my_job_collectin"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12.5dp"
            android:background="@color/border2"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <!--我的关注的机构-->
    <RelativeLayout
        android:id="@+id/rl_my_attention_office"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_like"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black2"
            android:text="@string/my_attention_office"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!--设置过-->
    <RelativeLayout
        android:id="@+id/rl_setting"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_setting"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/setting"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="12sp"
        android:textColor="#779A9F97"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="联系我们\n邮箱: lalilang@lalilang.com.cn\nQQ: 2132242165"/>

</LinearLayout>